# ABSOLUTE_CINEMA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  coverage-payment-after.xml  coverage-payment-before.xml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  mongo_adapter.py
backend/app/api/: __init__.py  docs.py  router.py
backend/app/builders/: __init__.py  attendance_report.py  order_pdf.py
backend/app/commands/: __init__.py  order_aggregate_refresh.py  order_cancellation.py  order_finalization.py  order_purchase.py  reservation_expiry.py  session_cancellation.py  ticket_cancellation.py  ticket_purchase.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  genres.py  logging.py  responses.py
backend/app/db/: __init__.py  collections.py  database.py  indexes.py  transactions.py  validators.py
backend/app/factories/: __init__.py  response_factory.py  schedule_factory.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  documents.py
backend/app/observers/: __init__.py  events.py
backend/app/payments/: __init__.py
backend/app/repositories/: base.py  movies.py  orders.py  payment_attempts.py  payment_audit_events.py  payment_webhook_events.py  payments.py  refunds.py  sessions.py  tickets.py  users.py
backend/app/schemas/: auth.py  common.py  localization.py  movie.py  order.py  payment.py  report.py  seat.py  session.py  ticket.py  user.py
backend/app/security/: jwt.py  (+3 more)
(+168 files in other folders)
