[project]
name = "cinema-showcase-backend"
version = "0.1.0"
description = "Academic FastAPI + MongoDB starter backend for Cinema Showcase."
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
